--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,10 @@
 .header {
-    grid-area: h;
-    background-color: #F0b7a4; 
-    border-radius: 20px 20px 0 0;
+    background-color: #333; 
+    border-radius: 5px 5px 0 0;
     border: 1px solid white;
 }
 .header .content {
     text-align: center;
-    color: #305f72;
+    color: white;
     font-weight: bold;
 }
