--- a/src/components/Tasks/Tasks.module.css
+++ b/src/components/Tasks/Tasks.module.css
@@ -1,28 +1,35 @@
-.textfield {
-    margin: 0 auto;
-    position: fixed;
-    left: 50%;
-    top: 30%;
-    transform: translate(-50%, -50%);
-
-}
 ul li {
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
     list-style: none;
-    padding: 2px 5px;
-    color: #ffffff;
+    padding: 8px 16px;
+    color: black;
     text-transform: capitalize;
     font-weight: 200;
-    border: 1px solid #d15e5e;
     border-radius: 5px;
-    background: #a4a4a4;
+    background: white;
+    margin-top: 8px;
 }
 .closeBtn {
     position: relative;
     display: inline-block;
     top: 0;
     padding: 4px 6px 4px 6px;
+    cursor: pointer;
+    border-width: 0;
+    border-radius: 50%;
+
+}
+
+.textfield .addBtn {
+    position: relative;
+    display: inline-block;
+    width: 150px;
+    height: 20px;
+    padding: 0 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 20px 40px;
 }
